<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/bare_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bare_app_name"/>
            <EditText
                android:id="@+id/app_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bare_app_name"
                android:singleLine="true"
                android:hint="@string/bare_app_name_edit_hint"/>
            <TextView
                android:id="@+id/bare_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_name_edit"
                android:text="@string/bare_title"/>
            <EditText
                android:id="@+id/status_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bare_title"
                android:singleLine="true"
                android:hint="@string/bare_status_edit_hint"/>
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status_edit"
                android:onClick="onClickSaveActivity"
                android:text="@string/bare_save"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
